# Hash-Cracker-Dictionary-Brute-

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
cli/: __init__.py  interface.py
core/: __init__.py
core/attacks/: __init__.py  base.py  brute_force.py  dictionary.py  hybrid.py
core/engine/: __init__.py  cracking_engine.py  scheduler.py  worker.py
core/masks/: __init__.py  expander.py  generator.py  parser.py
core/performance/: __init__.py  optimizer.py
core/rules/: __init__.py  common_rules.py  engine.py  mutations.py
core/utils/: __init__.py  formatters.py  helpers.py  validators.py
docs/: attack-modes.md  ethics-and-legal.md  hash-algorithms.md
examples/: advanced_usage.py  basic_usage.py
tests/: __init__.py  run_tests.py  test_attacks.py  test_hashes.py  test_utils.py
