[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hash-cracker-dictionary-brute"
version = "1.0.0"
description = "Professional hash-cracking and password auditing framework"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Joe Munene", email = "joemunene@example.com"}
]
maintainers = [
    {name = "Joe Munene", email = "joemunene@example.com"}
]
keywords = ["security", "password", "audit", "hash", "cracking", "forensics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Environment :: Console"
]
requires-python = ">=3.8"
dependencies = [
    "bcrypt>=4.0.0",
    "cryptography>=3.4.8",
    "psutil>=5.8.0",
    "chardet>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910"
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0"
]
test = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0"
]

[project.urls]
Homepage = "https://github.com/joemunene-by/Hash-Cracker-Dictionary-Brute-"
Documentation = "https://github.com/joemunene-by/Hash-Cracker-Dictionary-Brute-/blob/main/docs"
Repository = "https://github.com/joemunene-by/Hash-Cracker-Dictionary-Brute-.git"
"Bug Tracker" = "https://github.com/joemunene-by/Hash-Cracker-Dictionary-Brute-/issues"
Changelog = "https://github.com/joemunene-by/Hash-Cracker-Dictionary-Brute-/blob/main/CHANGELOG.md"

[project.scripts]
hashcracker = "cli.interface:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["core*", "cli*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
hashcracker = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["core", "cli"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".tox"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "bcrypt.*",
    "cryptography.*",
    "psutil.*",
    "chardet.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["core", "cli"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
